--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <title>T-Rex</title>
 </head>
 <body>
-    <div class="grid">
+    <h1 id="alert"></h1>
+    <div class="grid">        
         <div class="dino"></div>
     </div>
 </body>
